# Python_piscine

./: .gitignore
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py  tester.py
ex03/: NULL_not_found.py  tester.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py  ft_filter.py
ex07/: sos.py
ex08/: Loading.py  tester.py
ex09/: LICENSE  README.md
ex09/src/ft_package/: __init__.py  ft_package.py
subject_1/ex00/: Hello.py
subject_1/ex01/: format_ft_time.py
subject_1/ex03/: NULL_not_found.py  tester.py
subject_1/ex04/: whatis.py
subject_1/ex05/: building.py
subject_1/ex08/: Loading.py
subject_1/ex09/: pyproject.toml  requirements.txt  test.py
subject_2/ex00/: give_bmi.py  tester.py
subject_2/ex01/: array2D.py  tester.py
subject_2/ex02/: tester.py
subject_2/ex03/: load_image.py  zoom.py
subject_2/ex04/: load_image.py  rotate.py
subject_2/ex05/: pimp_image.py  tester.py
subject_3/ex00/: load_csv.py
subject_3/ex01/: aff_life.py  load_csv.py
subject_3/ex02/: aff_pop.py  load_csv.py
subject_3/ex03/: load_csv.py  projection_life.py
subject_4/ex00/: S1E9.py  tester.py
subject_4/ex01/: S1E7.py  S1E9.py  tester.py
